# roguelike

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: CD.yml
public/: index.html
src/: camera.rs  main.rs  spawn.rs  state.rs
src/components/: enemy.rs  left_mover.rs  mod.rs  player.rs  position.rs  renderable.rs
src/models/: map.rs
src/systems/: camera.rs  entity_render.rs  left_walker.rs  map_render.rs  mod.rs  player_input.rs
src/util/: mod.rs  ring.rs
wasm/: roguelike.js  roguelike_bg.wasm
