[package]
edition = "2021"
name = "roguelike"
version = "0.1.0"

[dependencies]
anyhow = "1.0.58"
bracket-lib = "0.8.1"
console_error_panic_hook = "0.1.7"
getrandom = {version = "0.2.7", features = ["js"]}
legion = {version = "0.4.0", default-features = false, features = ["codegen", "wasm-bindgen"]}
